initramfs: Paths are relative to android output dir Also, remove -Werror as pvr drivers have a warning when built with android Disable tv20 drivers - they prevented compilation and we have no TV out anyways
Change-Id: I716ecd2b7cffcc8309ca33ee6c650edae115a080

--- a/arch/arm/configs/yp_g70_usa_defconfig
+++ b/arch/arm/configs/yp_g70_usa_defconfig
@@ -82,7 +82,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="usr/venturi_initramfs.list"
+CONFIG_INITRAMFS_SOURCE="../../../../../../kernel/samsung/venturi/usr/venturi_initramfs.list"
 CONFIG_INITRAMFS_ROOT_UID=1000
 CONFIG_INITRAMFS_ROOT_GID=1000
 CONFIG_RD_GZIP=y
@@ -1366,7 +1366,7 @@ CONFIG_VIDEO_MFC_MAX_INSTANCE=4
 # CONFIG_VIDEO_MFC50_DEBUG is not set
 CONFIG_VIDEO_JPEG_V2=y
 # CONFIG_VIDEO_JPEG_DEBUG is not set
-CONFIG_VIDEO_TV20=y
+# CONFIG_VIDEO_TV20 is not set
 # CONFIG_HDMI_CEC is not set
 CONFIG_HDMI_HPD=y
 # CONFIG_TV_FB is not set
