wifi: Tweak driver config, allow built-in
Change-Id: I9f4f64661d510544294dcaf92037793bf6f312b1

--- a/drivers/net/wireless/bcm4329/Kconfig
+++ b/drivers/net/wireless/bcm4329/Kconfig
@@ -1,6 +1,6 @@
-config BROADCOM_WIFI
+config BCM4329
 	default m
-	tristate "Broadcom WiFi Driver"
+	tristate "Broadcom 4329 Driver"
 	---help---
 		Select this option to build Broadcom wlan driver
 
