--- a/arch/arm/configs/yp_g70_usa_defconfig
+++ b/arch/arm/configs/yp_g70_usa_defconfig
@@ -978,7 +978,7 @@ CONFIG_TUN=y
 CONFIG_NETDEV_1000=y
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
-CONFIG_BROADCOM_WIFI=m
+CONFIG_BCM4329=m
 # CONFIG_BROADCOM_WIFI_RESERVED_MEM is not set
 # CONFIG_HOSTAP is not set
 
