--- a/arch/arm/configs/yp_g70_eur_defconfig
+++ b/arch/arm/configs/yp_g70_eur_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Thu Mar  8 15:21:48 2012
+# Thu Jan  3 21:56:40 2013
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -82,7 +82,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="usr/venturi_initramfs.list"
+CONFIG_INITRAMFS_SOURCE="../../../../../../kernel/samsung/venturi/usr/venturi_initramfs.list"
 CONFIG_INITRAMFS_ROOT_UID=1000
 CONFIG_INITRAMFS_ROOT_GID=1000
 CONFIG_RD_GZIP=y
@@ -101,9 +101,7 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
 CONFIG_UID16=y
 CONFIG_SYSCTL_SYSCALL=y
-CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
-# CONFIG_KALLSYMS_EXTRA_PASS is not set
+# CONFIG_KALLSYMS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_SEC_LOG=y
@@ -165,10 +163,12 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_SIO=y
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -445,12 +445,14 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -978,8 +980,7 @@ CONFIG_TUN=y
 CONFIG_NETDEV_1000=y
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
-CONFIG_BROADCOM_WIFI=m
-# CONFIG_BROADCOM_WIFI_RESERVED_MEM is not set
+CONFIG_BCM4329=m
 # CONFIG_HOSTAP is not set
 
 #
@@ -1384,6 +1385,7 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # Graphics support
 #
+# CONFIG_DRM is not set
 CONFIG_PVR_SGX=y
 CONFIG_PVR_BUILD_RELEASE=y
 # CONFIG_PVR_BUILD_DEBUG is not set
@@ -1396,6 +1398,7 @@ CONFIG_PVR_SGX_LOW_LATENCY_SCHEDULING=y
 CONFIG_PVR_USSE_EDM_STATUS_DEBUG=y
 CONFIG_PVR_DUMP_MK_TRACE=y
 # CONFIG_PVR_PDUMP is not set
+# CONFIG_PVR_LINUX_MEM_AREA_POOL is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
@@ -1426,7 +1429,9 @@ CONFIG_FB_S3C_LCD_INIT=y
 # CONFIG_FB_S3C_DEBUG is not set
 # CONFIG_FB_S3C_TRACE_UNDERRUN is not set
 CONFIG_FB_S3C_DEFAULT_WINDOW=2
-CONFIG_FB_S3C_NR_BUFFERS=2
+CONFIG_FB_S3C_NR_BUFFERS=7
+CONFIG_FB_S3C_NUM_OVLY_WIN=1
+CONFIG_FB_S3C_NUM_BUF_OVLY_WIN=3
 # CONFIG_FB_S3C_VIRTUAL is not set
 # CONFIG_FB_S3C_LTE480WV is not set
 # CONFIG_FB_S3C_HT101HD1 is not set
