--- a/arch/arm/configs/yp_g70_usa_defconfig
+++ b/arch/arm/configs/yp_g70_usa_defconfig
@@ -101,9 +101,7 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
 CONFIG_UID16=y
 CONFIG_SYSCTL_SYSCALL=y
-CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
-# CONFIG_KALLSYMS_EXTRA_PASS is not set
+# CONFIG_KALLSYMS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_SEC_LOG=y
