--- a/arch/arm/configs/yp_g70_usa_defconfig
+++ b/arch/arm/configs/yp_g70_usa_defconfig
@@ -82,7 +82,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../../../../../../kernel/samsung/venturi/usr/venturi_initramfs.list"
+CONFIG_INITRAMFS_SOURCE="source/usr/venturi_initramfs.list"
 CONFIG_INITRAMFS_ROOT_UID=1000
 CONFIG_INITRAMFS_ROOT_GID=1000
 CONFIG_RD_GZIP=y
