--- a/arch/arm/configs/yp_g70_eur_defconfig
+++ b/arch/arm/configs/yp_g70_eur_defconfig
@@ -1354,7 +1354,7 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 CONFIG_VIDEO_S5K5CCGX=y
 # CONFIG_VIDEO_ISX005 is not set
 CONFIG_VIDEO_S5KA3DFX=y
-# CONFIG_VIDEO_S5K4ECGX is not set
+CONFIG_VIDEO_S5K4ECGX=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
